--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <compiledjar.name>spawners-${project.version}</compiledjar.name>
     </properties>
 
     <repositories>
@@ -27,7 +28,7 @@
     </repositories>
 
     <build>
-        <finalName>spawners-${project.version}</finalName>
+        <finalName>${compiledjar.name}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -50,6 +51,28 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>post-package</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.basedir}/scripts/postbuild.bat</executable>
+                            <arguments>
+                                <argument>${project.basedir}\target\${compiledjar.name}-jar-with-dependencies.jar
+                                </argument>
+                                <argument>${project.basedir}\..\data\plugins</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
