--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.kauzas.spawners</groupId>
+    <groupId>me.kauzas</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>plugin</module>
-        <module>sdk</module>
+        <module>spawner-plugin</module>
+        <module>spigot-sdk</module>
     </modules>
 
     <properties>
