--- a/spawner-plugin/src/main/resources/config.json
+++ b/spawner-plugin/src/main/resources/config.json
@@ -2,8 +2,8 @@
   "locale": "en-US",
   "storage": {
     "type": "sqlite",
-    "config": {
-      "path": "data.sqlite"
+    "options": {
+      "show_sql": false
     }
   }
 }
